--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,8 @@
 {
   "manifest_version": 2,
   "icons": {
+    "16": "images/icon_16.png",
+    "48": "images/icon_48.png",
     "128": "images/icon.png"
   },
   "browser_action": {
